W02 Project 1: Contacts Part 2
