# controllers/contactsController.js
@@ -3,6 +3,7 @@ const ObjectId = require("mongodb").ObjectId;
 
 const getAllContacts = async (req, res) => {
     //#swagger.tags=["Contacts"]
+    //#swagger.summary = Returns all contacts
     const result = await mongodb.getDatabase().db().collection("contacts").find();
     result.toArray().then((contacts) => {
         res.setHeader("Content-Type", "application/json");
@@ -12,6 +13,7 @@ const getAllContacts = async (req, res) => {
 
 const getSingleContact = async (req, res) => {
     //#swagger.tags=["Contacts"]
+    //#swagger.summary = Returns a contact bt ID
     const contactId = new ObjectId(req.params.id);
     const result = await mongodb.getDatabase().db().collection("contacts").find({ _id: contactId });
     result.toArray().then((contacts) => {
@@ -22,6 +24,7 @@ const getSingleContact = async (req, res) => {
 
 const createContact = async (req, res) => {
     //#swagger.tags=["Contacts"]
+    //#swagger.summary = Creates a new contact
     const contact = {
         firstName: req.body.firstName,
         lastName: req.body.lastName,
@@ -31,7 +34,7 @@ const createContact = async (req, res) => {
     };
     const response = await mongodb.getDatabase().db().collection("contacts").insertOne(contact);
     if (response.acknowledged) {
-        res.status(204).send();
+        res.status(200).send("Successful Response")
     } else {
         res.status(500).json(response.error || "Some error occurred while creating the contact");
     }
@@ -39,6 +42,7 @@ const createContact = async (req, res) => {
 
 const updateContact = async (req, res) => {
     //#swagger.tags=["Contacts"]
+    //#swagger.summary = Updates an existing contact
     const contactId = new ObjectId(req.params.id);
     const contact = {
         firstName: req.body.firstName,
@@ -49,7 +53,7 @@ const updateContact = async (req, res) => {
     }
     const response = await mongodb.getDatabase().db().collection("contacts").replaceOne({ _id: contactId }, contact);
     if (response.modifiedCount > 0) {
-        res.status(204).send();
+        res.status(200).send("Successful Response")
     } else {
         res.status(500).json(response.error || "Some error occurred while updating the contact");
     }
@@ -57,12 +61,13 @@ const updateContact = async (req, res) => {
 
 const deleteContact = async (req, res) => {
     //#swagger.tags=["Contacts"]
+    //#swagger.summary = Deletes an existing contact
     const contactId = new ObjectId(req.params.id);
     const response = await mongodb.getDatabase().db().collection("contacts").deleteOne({ _id: contactId });
     if (response.deletedCount > 0) {
-        res.status(204).send();
+        res.status(200).send("Successful Response")
     } else {
-        res.status(500).json(response.error || "Some error occurred while updating the contact");
+        res.status(500).json(response.error || "Some error occurred while deleting the contact");
     }
 }
 
